# stack-1.6-bug

./: .travis.yml  Lib.hs  README.md  http-sample.cabal
