name:                http-sample
version:             0.1.0.0
synopsis:            http2 bug
description:         http2 bug
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Lib
  build-depends:       
      base >= 4.7 && < 5
    , http2
  default-language:    Haskell2010



